// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleFieldset should render a collapsed fieldset (header only) 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <div
    className="theme-title-bar"
    id="my-fieldset__title_bar"
    onDoubleClick={[Function]}
    role="button"
  >
    <div
      className="theme-title"
      id="my-fieldset__title_wrapper"
      onClick={[Function]}
      role="button"
    >
      <legend
        id="my-fieldset__title"
      >
        Basic
      </legend>
    </div>
    <div
      className="theme-actions"
    >
      <ActionIconToggle
        active={false}
        className="theme-collapse"
        icon="talend-caret-down"
        iconTransform={null}
        id="my-fieldset__collapse"
        label="Collapse"
        onClick={[Function]}
        tooltipPlacement="top"
        type="button"
      />
    </div>
  </div>
</fieldset>
`;

exports[`CollapsibleFieldset should render a custom title 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <div
    className="theme-title-bar"
    id="my-fieldset__title_bar"
    onDoubleClick={[Function]}
    role="button"
  >
    <div
      className="theme-title"
      id="my-fieldset__title_wrapper"
      onClick={[Function]}
      role="button"
    >
      <legend
        id="my-fieldset__title"
      >
        Basic: Jimmy Somsanith
      </legend>
    </div>
    <div
      className="theme-actions"
    >
      <ActionIconToggle
        active={true}
        className="theme-collapse"
        icon="talend-caret-down"
        iconTransform="flip-vertical"
        id="my-fieldset__collapse"
        label="Collapse"
        onClick={[Function]}
        tooltipPlacement="top"
        type="button"
      />
    </div>
  </div>
  <div
    className="theme-body"
  >
    <Widget
      actions={Array []}
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "age",
          ],
          "schema": Object {
            "type": "number",
          },
          "title": "Age",
          "type": "number",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      actions={Array []}
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "address",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "Adress",
          "type": "text",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
  </div>
</fieldset>
`;

exports[`CollapsibleFieldset should render a full fieldset (header and body) 1`] = `
<fieldset
  className="form-group theme-collapsible-panel collapsible-panel"
>
  <div
    className="theme-title-bar"
    id="my-fieldset__title_bar"
    onDoubleClick={[Function]}
    role="button"
  >
    <div
      className="theme-title"
      id="my-fieldset__title_wrapper"
      onClick={[Function]}
      role="button"
    >
      <legend
        id="my-fieldset__title"
      >
        Basic
      </legend>
    </div>
    <div
      className="theme-actions"
    >
      <ActionIconToggle
        active={true}
        className="theme-collapse"
        icon="talend-caret-down"
        iconTransform="flip-vertical"
        id="my-fieldset__collapse"
        label="Collapse"
        onClick={[Function]}
        tooltipPlacement="top"
        type="button"
      />
    </div>
  </div>
  <div
    className="theme-body"
  >
    <Widget
      actions={Array []}
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "age",
          ],
          "schema": Object {
            "type": "number",
          },
          "title": "Age",
          "type": "number",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
    <Widget
      actions={Array []}
      id="my-fieldset"
      schema={
        Object {
          "key": Array [
            "address",
          ],
          "schema": Object {
            "type": "string",
          },
          "title": "Adress",
          "type": "text",
        }
      }
      value={
        Object {
          "firstname": "Jimmy",
          "isClosed": false,
          "lastname": "Somsanith",
        }
      }
      widgets={Object {}}
    />
  </div>
</fieldset>
`;
